Finishes updates for replacing new Integer(int) with Integer.valueOf(int). Affects the following files:
AbstractOptions.java
GameOptions.java
Options.java
PreferenceStore.java
Report.java
Terrains.java
ArtilleryBayWeaponIndirectFireHandler.java
ArtilleryWeaponIndirectFireHandler.java