@@ -44,7 +44,7 @@ public class Option implements IOption, Serializable {
     }
 
     public Option(IOptions owner, String name, int defaultValue) {
-        this(owner, name, INTEGER, new Integer(defaultValue));
+        this(owner, name, INTEGER, Integer.valueOf(defaultValue));
     }
 
     public Option(IOptions owner, String name, float defaultValue) {
